Prevent the canvas from being highlighted when touched on mobile

--- a/style/main2.css
+++ b/style/main2.css
@@ -319,6 +319,17 @@ img {
 canvas {
     display: block;
     margin: 0 auto;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Chrome/Safari/Opera */
+    -khtml-user-select: none;
+    /* Konqueror */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
 }
 
 #footer {
